Dammit there's an issue with the viewBox stretching

--- a/src/styles/components/svg-viewer-v2.styl
+++ b/src/styles/components/svg-viewer-v2.styl
@@ -11,12 +11,9 @@
   background: $tertiary
   display: block
   margin: 0 auto
-  border: 1px solid white
+  //border: 1px solid white
   flex: 1 1 auto
   width: 100%
-  
-  &:focus
-    border: 1px solid red
     
   &.show-aggregations-none
     .aggregated-text    
